Fix the header overflow colour with another div.

--- a/style.css
+++ b/style.css
@@ -21,6 +21,10 @@ html, body {
 	color: black;
 }
 
+#header {
+	background-color: black;
+}
+
 #title {
 	text-shadow: 0 0 3px black;
 	font-weight: bold;
